# bevy_training

./: Cargo.toml  README.md
board_plugin/: Cargo.toml  README.md
board_plugin/src/: bounds.rs  lib.rs
board_plugin/src/components/: bomb_neighbor.rs  coordinates.rs  mod.rs
board_plugin/src/ressources/: board.rs  board_options.rs  mod.rs  tile.rs  tile_map.rs
board_plugin/src/systems/: input.rs
src/: main.rs
src/plugins/hello_plugin/: components.rs  mod.rs  systems.rs
