[package]
name = "bevy_training"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
debug = ["board_plugin/debug", "bevy-inspector-egui"]


[dependencies]
bevy = { version = "0.6", features = ["dynamic"] }
bevy-inspector-egui = { version = "0.9", optional = true }
board_plugin = { path = "board_plugin" }

[workspace]
members = [
    "board_plugin"
]